production set-up

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"npm:nextDev\" \"npm:wundergraph\" \"npm:database\" \"npm:browser\"",
-    "wundergraph": "wait-on \"tcp:54322\" && cd .wundergraph && wunderctl up --debug",
+    "wundergraph": "wait-on \"tcp:54322\" && cd .wundergraph && wunderctl up --env .env.dev",
     "browser": "wait-on \"http-get://localhost:3000\" && open-cli http://localhost:3000",
     "database": "docker-compose up",
     "nextDev": "next dev",
